--- a/css/estilos.css
+++ b/css/estilos.css
@@ -65,3 +65,16 @@ h1 {
 .tecla:active:focus {
   box-shadow: 3px 3px 0 var(--vermelha-escura) inset, 1px 1px 10px var(--luz);
 }
+
+footer {
+  margin-top: 40px;
+}
+
+footer a {
+  font-weight: bolder;
+}
+
+footer a:hover {
+  color: red;
+  font-weight: bolder;
+}
